# redundant_manipulator_control_tutorial

./: .gitmodules  stack.xml
ball_reaching/: CMakeLists.txt  README.md  ball_reaching.py  hueblob.py  mainpage.dox  manifest.xml  reach_ball.py  supervisor.py  test_interpolation.py  test_motion.py  watch_zone.py
ball_reaching/action/: watch_zone.action
ball_reaching/doc/: control-graph.dot
ball_reaching/launch/: robot.launch  simu.launch  vision_simu.launch
ball_reaching/src/: CMakeLists.txt  cubic-interpolation.cc  cubic-interpolation.hh  cylindrical-cubic-interpolation.cc  cylindrical-cubic-interpolation.hh
